; ModuleID = '/home/carl/AnghaBench/git/compat/extr_pread.c_git_pread.c'
source_filename = "/home/carl/AnghaBench/git/compat/extr_pread.c_git_pread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_CUR = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_pread(i32 %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @SEEK_CUR, align 4
  %14 = call i64 @lseek(i32 %12, i64 0, i32 %13)
  store i64 %14, i64* %10, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i64, i64* %9, align 8
  %17 = load i32, i32* @SEEK_SET, align 4
  %18 = call i64 @lseek(i32 %15, i64 %16, i32 %17)
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %35

21:                                               ; preds = %4
  %22 = load i32, i32* %6, align 4
  %23 = load i8*, i8** %7, align 8
  %24 = load i64, i64* %8, align 8
  %25 = call i32 @read_in_full(i32 %22, i8* %23, i64 %24)
  store i32 %25, i32* %11, align 4
  %26 = load i64, i64* %10, align 8
  %27 = load i32, i32* %6, align 4
  %28 = load i64, i64* %10, align 8
  %29 = load i32, i32* @SEEK_SET, align 4
  %30 = call i64 @lseek(i32 %27, i64 %28, i32 %29)
  %31 = icmp ne i64 %26, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %21
  store i32 -1, i32* %5, align 4
  br label %35

33:                                               ; preds = %21
  %34 = load i32, i32* %11, align 4
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %33, %32, %20
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i64 @lseek(i32, i64, i32) #1

declare dso_local i32 @read_in_full(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
